# thefuck

./: README.md  pyproject.toml  setup.py
fuck/: types.py  utils.py
fuck/entrypoints/: main.py  setup.py
fuck/shells/: bash.py  fish.py  generic.py  powershell.py  tcsh.py  zsh.py
tests/: test_readme.py
tests/entrypoints/: test_not_configured.py
tests/shells/: test_fish.py
thefuck/: ai.py
thefuck/entrypoints/: setup.py
