[build-system]
requires = ["setuptools>=61.0", "wheel", "fastentrypoints"]
build-backend = "setuptools.build_meta"

[project]
name = "fuck-cli"
version = "3.47"
description = "AI-first command fixer for shell/terminal CLI with streamed explanations and Markdown rendering"
readme = "README.md"
requires-python = ">=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*"
license = "MIT"
authors = [{name = "leeguoo"}]
keywords = [
  "ai",
  "autocorrect",
  "bash",
  "cli",
  "command line",
  "fish",
  "productivity",
  "shell",
  "terminal",
  "zsh",
]
dependencies = [
  "psutil",
  "colorama",
  "six",
  "rich; python_version >= '3.8'",
  "pathlib2; python_version < '3.4'",
  "backports.shutil_get_terminal_size; python_version < '3.3'",
  "decorator<5; python_version <= '2.7'",
  "pyte<0.8.1; python_version <= '2.7'",
  "decorator; python_version > '2.7'",
  "pyte; python_version > '2.7'",
  "win_unicode_console; sys_platform == 'win32'",
]

[project.urls]
Homepage = "https://github.com/leeguooooo/fuck"
Repository = "https://github.com/leeguooooo/fuck"
Issues = "https://github.com/leeguooooo/fuck/issues"
Documentation = "https://github.com/leeguooooo/fuck#readme"

[project.scripts]
fuck = "fuck.entrypoints.main:main"

[project.optional-dependencies]
dev = [
  "flake8>=6; python_version >= '3.8.1'",
  "pytest<9; python_version >= '3.8'",
  "mock; python_version >= '3.8'",
  "pytest-mock; python_version >= '3.8'",
  "wheel; python_version >= '3.8'",
  "setuptools>=17.1; python_version >= '3.8'",
  "pexpect; python_version >= '3.8'",
  "pypandoc; python_version >= '3.8'",
  "pytest-benchmark; python_version >= '3.8'",
  "pytest-docker-pexpect; python_version >= '3.8'",
  "twine; python_version >= '3.8'",
]
